Fix: text wrap for all screen sizes

--- a/src/components/individualPainting/IndividualPainting.css
+++ b/src/components/individualPainting/IndividualPainting.css
@@ -13,6 +13,7 @@
   box-shadow: 0px 4px 15px -4px rgba(234, 134, 12, 0.893);
   box-sizing: border-box;
   display: flex;
+  transition: 1s;
   flex-direction: row;
   justify-content: space-between;
   margin-top: 8em;
@@ -23,7 +24,7 @@
 .individual-painting-img {
   display: flex;
   justify-content: center;
-  height: 400px;
+  height: 600px;
   border-radius: 10px;
   color: black;
   margin-left: 5px;
@@ -72,15 +73,14 @@
 }
 
 .meme-title {
-  display: re;
-  position: fixed;
+  display: flex;
+  position: absolute;
   top: 28rem;
-  left: 8rem;
-  font-size: 2.5vw;
+  left: 8.8rem;
+  font-size: 3rem;
   color: white;
-  inline-size: 20rem;
-  word-break: break-all; 
-  color: white;  
+  inline-size: 20.2rem;
+  word-break: break-all;  
   max-width: 100%;
 }
 
@@ -97,6 +97,7 @@
   position: fixed;
   top: 12%;
   border-radius: 20%;
+  -webkit-filter: invert(50%);
 }
 
 .home-button:hover {
@@ -104,16 +105,73 @@
   background-color: #FD6A02;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (min-width:1110 ) and (max-width: 1200px) {
   .individual-painting {
-    flex-direction: column;
     margin: 10px;
   }
   .individual-painting-img {
     border-radius: 10px;
-    height:400px;
+    height:550px;
   }
   .meme-form {
     justify-content: center;
   }
+}
+
+@media screen and (max-width: 1000px){
+  .individual-painting {
+    flex-direction: column;
+    margin: 10px;
+  }
+
+  .meme-title {
+    top: 20rem;
+    left:20rem;
+    font-size: 2.5rem;   
+  }
+}
+
+
+@media screen and (max-width: 525px) {
+  .meme-title {
+    top: 18rem;
+    left:2rem;
+    font-size: 2.5rem;   
+  }
+  .individual-painting {
+    transition: 1s;
+    flex-direction: column;
+    margin: 10px;
+  }
+
+  .home-button {
+    font-size: 3rem;
+    right: 2%;
+    position: fixed;
+    top: 12%;
+    border-radius: 20%;
+  }
+  .individual-painting{
+    width: 100vw;
+  }
+
+  .individual-painting-img {
+    border-radius: 10px;
+    width: 100vw;
+  }
+}
+
+@media screen and (min-width: 536px) and (max-width: 760px) {
+
+  .meme-title {
+    top: 18rem;
+    left:12rem;
+    font-size: 2.5rem;    
+  }
+
+  .individual-painting-img {
+    border-radius: 10px;
+    height:550px;
+  }
+
 }
